--- a/css/about_us.css
+++ b/css/about_us.css
@@ -1,4 +1,331 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+/* ... existing CSS code ... */
+
+/* Responsive Design */
+
+/* Mobile (max-width: 768px) */
+
+@media only screen and (max-width: 768px) {
+    .container {
+      padding: 0px 20px;
+    }
+    .nav-div {
+      flex-direction: column;
+    }
+    .nav-logo {
+      height: 50px;
+    }
+    .nav-links {
+      margin-top: 10px;
+    }
+    .nav-links li {
+      margin-bottom: 10px;
+    }
+    .nav-login, .nav-sign {
+      padding: 5px 10px;
+    }
+    .img {
+      width: 100%;
+      height: 200px;
+    }
+    .card {
+      width: 100%;
+      margin: 10px 0;
+    }
+    .card-container, .card-container3 {
+      flex-direction: column;
+    }
+    .card3 {
+      width: 100%;
+      margin: 10px 0;
+    }
+    .game-container1 {
+      width: 100%;
+      height: 300px;
+    }
+    .card2 {
+      width: 100%;
+      height: 100%;
+    }
+  }
+  
+  /* Tablet (max-width: 1024px) */
+  
+  @media only screen and (max-width: 1024px) {
+    .container {
+      padding: 0px 30px;
+    }
+    .nav-div {
+      flex-direction: row;
+    }
+    .nav-logo {
+      height: 60px;
+    }
+    .nav-links {
+      margin-top: 0;
+    }
+    .nav-links li {
+      margin-bottom: 0;
+    }
+    .nav-login, .nav-sign {
+      padding: 8px 15px;
+    }
+    .img {
+      width: 100%;
+      height: 250px;
+    }
+    .card {
+      width: calc(50% - 10px);
+      margin: 10px;
+    }
+    .card-container, .card-container3 {
+      flex-direction: row;
+    }
+    .card3 {
+      width: calc(50% - 10px);
+      margin: 10px;
+    }
+    .game-container1 {
+      width: 100%;
+      height: 350px;
+    }
+    .card2 {
+      width: 100%;
+      height: 100%;
+    }
+  }
+  
+  /* Laptop (max-width: 1440px) */
+  
+  @media only screen and (max-width: 1440px) {
+    .container {
+      padding: 0px 40px;
+    }
+    .nav-div {
+      flex-direction: row;
+    }
+    .nav-logo {
+      height: 80px;
+    }
+    .nav-links {
+      margin-top: 0;
+    }
+    .nav-links li {
+      margin-bottom: 0;
+    }
+    .nav-login, .nav-sign {
+      padding: 10px 20px;
+    }
+    .img {
+      width: 100%;
+      height: 300px;
+    }
+    .card {
+      width: calc(33.33% - 10px);
+      margin: 10px;
+    }
+    .card-container, .card-container3 {
+      flex-direction: row;
+    }
+    .card3 {
+      width: calc(33.33% - 10px);
+      margin: 10px;
+    }
+    .game-container1 {
+      width: 100%;
+      height: 400px;
+    }
+    .card2 {
+      width: 100%;
+      height: 100%;
+    }
+  }
+  
+  /* TV (max-width: 2560px) */
+  
+  @media only screen and (max-width: 2560px) {
+    .container {
+      padding: 0px 60px;
+    }
+    .nav-div {
+      flex-direction: row;
+    }
+    .nav-logo {
+      height: 100px;
+    }
+    .nav-links {
+      margin-top: 0;
+    }
+    .nav-links li {
+      margin-bottom: 0;
+    }
+    .nav-login, .nav-sign {
+      padding: 12px 25px;
+    }
+    .img {
+      width: 100%;
+      height: 350px;
+    }
+    .card {
+      width: calc(25% - 10px);
+      margin: 10px;
+    }
+    .card-container, .card-container3 {
+      flex-direction: row;
+    }
+    .card3 {
+      width: calc(25% - 10px);
+      margin: 10px;
+    }
+    .game-container1 {
+      width: 100%;
+      height: 450px;
+    }
+    .card2 {
+      width: 100%;
+      height: 100%;
+    }
+}
+
+/* Remaining styles */
+
+.card-info, .card-info3 {
+  padding: 20px;
+  text-align: center;
+}
+
+.card-info h2, .card-info3 h2 {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.card-info p, .card-info3 p {
+  font-size: 14px;
+  color: #f8f7f7;
+}
+
+.game-container1 {
+  position: relative;
+  width: 400px;
+  height: 400px;
+  margin: 50px auto;
+}
+
+.card2 {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.card2-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
+.card2-back {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  border-radius: 10px;
+  display: none;
+}
+
+.start1-btn, .reset1-btn {
+  background-color: #4CAF50;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.score1 {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.game1-images {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.game1-image {
+  width: 80px;
+  height: 80px;
+  margin: 5px;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.game1-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+}
+.card2-back button {
+    background-color: #4CAF50;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  .card2-back button:hover {
+    background-color: #3e8e41;
+  }
+  
+  .card2-back p {
+    font-size: 18px;
+    margin-bottom: 20px;
+  }
+  
+  .card2-back a {
+    text-decoration: none;
+    color: #4CAF50;
+  }
+  
+  .card2-back a:hover {
+    color: #3e8e41;
+  }
+  
+  /* Footer styles */
+  
+  footer {
+    background-color: #333;
+    color: #fff;
+    padding: 20px;
+    text-align: center;
+    clear: both;
+  }
+  
+  footer p {
+    margin-bottom: 10px;
+  }
+  
+  footer a {
+    text-decoration: none;
+    color: #fff;
+  }
+  
+  footer a:hover {
+    color: #ccc;
+  }
+
+
+  /*main code  */
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 *{
     text-decoration: none;
@@ -374,4 +701,3 @@ header nav a {
     color: rgb(252, 186, 79);
 
  } 
-  
